Quick settings menu shows night light toggle on unsupported displays
Affected version
Fedora 37 Workstation with GNOME 43.beta (test day image)
Bug summary
Quick settings menu shows night light toggle on systems that do not support it.
Steps to reproduce
Open quick settings on a system that does not support night light like a VM.
What happened
Night light toggle is visible. Nothing happens when the toggle is pressed. The night light panel in GNOME Settings shows that night light is not supported.
What did you expect to happen
Night light toggle should not be visible.